new system of soundcloud display + artists macarons

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -21,8 +21,9 @@
 }
 
 .avatar-artist {
-  width: 100px;
-  height: 100px;
+  width: 75px;
+  height: 75px;
   border-radius: 50%;
   object-fit: cover;
+  background-color: white;
 }
