--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,6 +1,7 @@
 // Import your components CSS files here.
 @import "alert";
 @import "audio_quizz_card";
+@import "artist_card";
 @import "avatar";
 @import "background_color"; // CHECK COMMENT ON PEUT LE METTRE AILLEURS POUR QUE CE SOIT PLUS PROPRE
 @import "banner";
