added the tuto for the first session

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,4 +1,4 @@
-<div class="banner">
+<div class="banner <%= "first-session-animation-hide" if @non_existing_session %>">
   <!-- <img src="https://s3-us-west-1.amazonaws.com/2019.acypaa.org/assets/party1.jpg" alt=""> -->
   <div class="home-message">
     <h1>Techno2U</h1>
