--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,7 +30,7 @@
           <%= link_to 'Profile', profile_path(@user)  %>
         </li>
 
-        <li class="nav-item">
+        <li class="nav-item" id="quizz">
           <%= link_to 'Quizz', new_preference_path  %>
         </li>
 
