--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,5 +1,4 @@
 // Import your components CSS files here.
-@import "alert";
 @import "audio_quizz_card";
 @import "avatar";
 @import "background_color"; // CHECK COMMENT ON PEUT LE METTRE AILLEURS POUR QUE CE SOIT PLUS PROPRE
@@ -21,3 +20,6 @@
 @import "party_card";
 @import "link";
 @import "image";
+@import "alert_audio_card";
+@import "alert_for_card_event";
+@import "alert_event_save";
