added cloudinary + images

--- a/app/views/shared/_alert_for_audio_quizz.html.erb
+++ b/app/views/shared/_alert_for_audio_quizz.html.erb
@@ -3,7 +3,7 @@
 
   <div class="audio-quizz-card">
     <div class='soundcloud-player-audio-quizz'>
-      <%= image_tag 'Capture d’écran 2020-03-02 à 18.13.32.png', class: "player-screenshot"%>
+      <%= cl_image_tag 'https://res.cloudinary.com/dozzulcez/image/upload/v1583243952/fvvbxe0knd2kzpdxaptg.png', class: "player-screenshot"%>
     </div>
 
     <div class="album-picture">
