start front details

--- a/app/assets/stylesheets/components/_home_card.scss
+++ b/app/assets/stylesheets/components/_home_card.scss
@@ -24,9 +24,9 @@
 .title {
   color: white;
   font-weight: 300;
-  position: absolute;
-  left: 20px;
-  top: 15px;
+  // position: absolute;
+  // left: 20px;
+  // top: 15px;
   text-shadow: 2px 2px #1D1C1C;
 }
 
