--- a/app/views/shared/_home_card.html.erb
+++ b/app/views/shared/_home_card.html.erb
@@ -1,14 +1,14 @@
 <div class="card">
-  <h3 class="title"><%= party.name %></h3>
   <%= render 'shared/star_button'%>
-  <div class="bar">
+<!--   <div class="bar">
     <div class="emptybar"></div>
     <div class="filledbar"></div>
-  </div>
+  </div> -->
   <div class="event-picture">
     <img src="https://www.residentadvisor.net<%= party.image_url %>" onerror="this.src='https://images.unsplash.com/photo-1513670144176-2211a82b531f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80';" alt="Missing Image" />
   </div>
-  <ul class="infos">
+  <h3 class="title m-3"><%= party.name %></h3>
+  <ul class="infos mt-5 ">
     <li>
       <i class="far fa-user text-light"></i>
       <% party.artists.first(3).each do |artist| %>
