--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
       </li>
 
       <li class="nav-item">
-        <%= link_to 'Parties', parties_path  %>
+        <%= link_to 'Parties', parties_path, class: "parties"  %>
       </li>
 
       <% if current_user.nil?  %>
