v1 of the filtering query on parties after the audio quizz

--- a/app/views/preferences/new.html.erb
+++ b/app/views/preferences/new.html.erb
@@ -14,10 +14,12 @@
       <div class="stackedcards--animatable stackedcards-overlay right"><i class="fas fa-star" id="star"></i></div>
       <div class="stackedcards--animatable stackedcards-overlay left"><i class="fas fa-times" id="ban"></i></div>
 
-      <!-- <div class="global-actions"> -->
+      <% if  @tracks.any?%>
         <div class="left-action"><%= render 'shared/remove_button' %></div>
         <div class="right-action"><%= render 'shared/audio_quizz_star_button.html' %></div>
-      <!-- </div> -->
+      <% end %>
     </div>
   </div>
 </div>
+
+<%= console %>
