--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -1,9 +1,6 @@
 <div class="index-page">
   <div class="container d-flex">
     <div class="sidenav-party-index">
-      <i class="fas fa-bars text-light"></i>
-      <ul class="sidenav-party-index-filters">
-        <li>
           <div class="container">
             <div class="form-wrapper" style="width: 250px; margin: 0 auto;">
               <%= simple_form_for :search, method: "get", html: {class: "filter_form"}  do |f| %>
@@ -14,34 +11,38 @@
               <% end %>
             </div>
           </div>
-        </li>
-        <!--  <li>
-                  <form method="get">
-                    <div class="form-group">
-                      <input name="location" type="country" class="form-control" id="county" placeholder="Where">
-                    </div>
-                    <div class="form-group">
-                      <input type="region" class="form-control" id="county" placeholder="Region">
-                    </div>
-                    <div class="form-group">
-                      <input type="city" class="form-control" id="county" placeholder="City">
-                    </div>
-                  </form>
-              </li> -->
-           <!-- <li>
-                  <%#= render 'shared/checkboxes' %>
-                </li> -->
-          <!--  <li class='price-range'>
-                  <form>
-                    <label for="formControlRange">Price</label>
-                    <input type="range" class="form-control-range" id="formControlRange">
-                  </form>
-                </li> -->
-          <!-- <li> -->
-                  <%#= render 'shared/calendar' %>
-          <!--  </li> -->
-              <%= paginate @parties %>
-            </ul>
+<!--       <i class="fas fa-bars text-light"></i> -->
+<!--       <ul class="sidenav-party-index-filters">
+ -->
+           <!--  <li>
+                      <form method="get">
+                        <div class="form-group">
+                          <input name="location" type="country" class="form-control" id="county" placeholder="Where">
+                        </div>
+                        <div class="form-group">
+                          <input type="region" class="form-control" id="county" placeholder="Region">
+                        </div>
+                        <div class="form-group">
+                          <input type="city" class="form-control" id="county" placeholder="City">
+                        </div>
+                      </form>
+                  </li> -->
+               <!-- <li>
+                      <%#= render 'shared/checkboxes' %>
+                    </li> -->
+              <!--  <li class='price-range'>
+                      <form>
+                        <label for="formControlRange">Price</label>
+                        <input type="range" class="form-control-range" id="formControlRange">
+                      </form>
+                    </li> -->
+              <!-- <li> -->
+                      <%#= render 'shared/calendar' %>
+              <!--  </li> -->
+              <div class="container-li">
+                <%= paginate @parties %>
+              </div>
+            <!-- </ul> -->
       </div>
     </div>
     <div class='container container-parties-index'>
