--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -2,3 +2,11 @@
   font-size: 20px;
   padding-left: 10px;
 }
+
+.form_find_party {
+  justify-content: center;
+  h2{
+    text-align: center;
+    margin-bottom: 20px;
+  }
+}
