finished the redirection on events based on quizz likes

--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -39,7 +39,7 @@
           <!-- <li> -->
                   <%#= render 'shared/calendar' %>
           <!--  </li> -->
-              <%= paginate @parties %>
+              <%= paginate @parties if params[:page] %>
             </ul>
       </div>
     </div>
