--- a/app/views/preferences/new.html.erb
+++ b/app/views/preferences/new.html.erb
@@ -1,4 +1,5 @@
 <div class="container audio-quizz">
+  <div class='artist-names d-none'><%= artist_names = @artists.map { |artist| artist.name } %></div>
   <div class="quizz-row">
     <div class="indications">
       <h3>Listen to some tracks</h3>
@@ -21,5 +22,3 @@
     </div>
   </div>
 </div>
-
-<%= console %>
