--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -27,3 +27,11 @@
   object-fit: cover;
   background-color: white;
 }
+
+.avatar-artist-dashboard {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  background-color: white;
+}
