front show home login

--- a/app/assets/stylesheets/pages/_artist_show.scss
+++ b/app/assets/stylesheets/pages/_artist_show.scss
@@ -2,7 +2,7 @@
   color: white;
 }
 
-.container-party-show i {
+.container-artist-show i {
   font-size: 30px;
 }
 
@@ -22,13 +22,10 @@
 }
 
 .soundcloud-player {
-  width: 50%;
+  width: 100%;
 }
 
 .social-media-card {
-  width: 50%;
+  width: 100%;
 }
 
-.container-party-show {
-  width: 80%;
-}
