--- a/app/views/shared/_artist_avatar.html.erb
+++ b/app/views/shared/_artist_avatar.html.erb
@@ -1,4 +1,4 @@
-<div class="artist-small-card" id="<%= artist.name %>">
+<div class="artist-small-card m-3" id="<%= artist.name %>">
   <%= cl_image_tag 'https://res.cloudinary.com/dozzulcez/image/upload/v1583244127/bsmnakyc3nodk4wwphel.svg', alt: "alttext", class: "avatar-artist", id: artist.name %>
   <p class="m-3"><strong id="<%= artist.name %>"><%= artist.name %></strong></p>
 </div>
