--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,12 +19,12 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
+      <div>
+       <%= f.button :submit, "Sign up", class: "btn btn-light signup-btn" %>
+      </div>
+      <div>
+       <%= render "devise/shared/links" %>
+      </div>
     </div>
   <% end %>
-
-
-  <div class="other-links-sign-up">
-    <%= render "devise/shared/links" %>
-  </div>
 </div>
