--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -42,8 +42,7 @@
                       <%#= render 'shared/calendar' %>
               <!--  </li> -->
               <div class="container-li">
-                <%= paginate @parties if params[:page] %>
-                <%#= paginate @parties %>
+                <%= paginate @parties %>
               </div>
             <!-- </ul> -->
         </li>
