--- a/app/views/shared/_party_card.html.erb
+++ b/app/views/shared/_party_card.html.erb
@@ -1,7 +1,10 @@
-<div class="party_card m-3">
-  <h5 class="party_card_title"><%= party.name %></h5>
-  <ul class="infos_party_card">
-    <li><i class="far fa-calendar-alt text-light"></i><%= party.start_date %> - <%= party.start_time %></li>
-    <li><i class="fab fa-houzz text-light"></i><%= party.venue_name %> - <%= party.venue_location %></li>
+<div class="party_card m-3 p-3">
+  <h5 class="party_card_title"><%= party.name.truncate(25) %></h5>
+  <div class="m-3">
+    <i class="far fa-calendar-alt text-light mr-3"></i><%= party.start_date %> - <%= party.start_time %>
+  </div>
+  <div class="m-3">
+    <i class="fas fa-map-marker text-light mr-3"></i><%= party.venue_name %> - <%= party.venue_location %>
+  </div>
   </ul>
 </div>
