--- a/app/assets/stylesheets/components/_party_card.scss
+++ b/app/assets/stylesheets/components/_party_card.scss
@@ -1,12 +1,12 @@
 .party_card {
-  background-color: $light-gray;
+  background-color: rgba(250, 250, 250, 0.05);
   height: 200px;
   width: 300px;
-  border: solid 1px red;
   border-radius: 10px;
   box-shadow: -1rem 0 3rem #000;
+  color: white;
 }
 
 .party_card_title {
-  color: black;
+  color: white;
 }
