--- a/app/views/shared/_profile_card.html.erb
+++ b/app/views/shared/_profile_card.html.erb
@@ -2,12 +2,11 @@
 <div class="profile-card">
 
   <div class="profile-card-left">
-    <h3 class="profile-card-title"><%= party.name.truncate(20) %></h3>
     <img src="https://www.residentadvisor.net<%= party.image_url %>" onerror="this.src='https://images.unsplash.com/photo-1513670144176-2211a82b531f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80';" alt="Missing Image" />
-
   </div>
 
   <div class="profile-card-middle">
+    <h5 class="profile-card-title m-3"><%= party.name.truncate(40) %></h5>
     <ul class="profile-card-infos">
       <li><i class="far fa-user text-light"></i><%= party.artists.map(&:name).join("/ ").truncate(40) %></li>
 
