les stars pour les attending c bon

--- a/app/views/shared/_home_card.html.erb
+++ b/app/views/shared/_home_card.html.erb
@@ -1,5 +1,7 @@
 <div class="card">
-  <%= render 'shared/star_button'%>
+  <%#= link_to party_attendings_path(party), method: :post  do%>
+  <%= render 'shared/star_button', party: party%>
+  <%# end %>
 <!--   <div class="bar">
     <div class="emptybar"></div>
     <div class="filledbar"></div>
