--- a/app/views/shared/_profile_card.html.erb
+++ b/app/views/shared/_profile_card.html.erb
@@ -18,6 +18,7 @@
   </div>
 
   <div class="profile-card-right">
+    <%#= render 'shared/star_button', party: party%>
     <%= render 'shared/soundcloud_player', soundcloud_id: track %>
   </div>
 </div>
