--- a/app/views/shared/_star_button.html.erb
+++ b/app/views/shared/_star_button.html.erb
@@ -1,3 +1,15 @@
-<div class="star-button">
-  <i class="fas fa-star" id="star"></i>
-</div>
+
+<%if current_user.attended?(party) %>
+  <%= link_to attending_path(current_user.get_attending_from_party(party)), method: :delete  do%>
+    <div class="star-button">
+      <i class="fas fa-star text-warning" id="star"></i>
+    </div>
+  <% end %>
+
+<%else %>
+  <%= link_to party_attendings_path(party), method: :post  do%>
+    <div class="star-button">
+      <i class="fas fa-star" id="star"></i>
+    </div>
+  <% end %>
+<%end %>
