--- a/app/views/parties/show.html.erb
+++ b/app/views/parties/show.html.erb
@@ -35,9 +35,9 @@
   <div class="social-media-card p-3">
     <!-- Share button code -->
     <div class="fb-share-button "
-      data-href="http://localhost:3000/parties/<%= @party.id %>"
+      data-href="http://www.techno2u.monster/parties/<%= @party.id %>"
       data-layout="button_count"
-      data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share the event</a>
+      data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Tell your friends!</a>
     </div>
   </div>
   </div>
