--- a/app/assets/stylesheets/components/_profile_card.scss
+++ b/app/assets/stylesheets/components/_profile_card.scss
@@ -1,7 +1,7 @@
 .profile-card {
   position: relative;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 12fr 1fr;
   margin-bottom: 20px;
   background-color: #17141d;
   box-shadow: -1rem 0 3rem #000;
@@ -11,6 +11,11 @@
 
   a {
     text-decoration: none;
+  }
+
+  .profile-content-grid {
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
