--- a/app/assets/stylesheets/components/_party_card.scss
+++ b/app/assets/stylesheets/components/_party_card.scss
@@ -1,5 +1,5 @@
 .party_card {
-  background-color: rgba(250, 250, 250, 0.05);
+  background-color: #17141d;
   height: 200px;
   width: 300px;
   border-radius: 10px;
