--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,14 +1,12 @@
+<% if @artist.picture_url.nil? %>
+  <%= render 'shared/artist_banner', picture: "http://res.cloudinary.com/dozzulcez/image/upload/ownpy1x8yf0zriqij8hi"  %>
+<% else %>
+  <%= render 'shared/artist_banner', picture: "https://www.residentadvisor.net#{@artist.picture_url}"  %>
+<% end %>
+
 <div class="container container-artist-show my-3">
   <h1><%=  @artist.name %></h1>
-
-  <% if @artist.picture_url.nil? %>
-    <%= cl_image_tag("ownpy1x8yf0zriqij8hi", class: "artist_image") %>
-  <% else %>
-    <img src="https://www.residentadvisor.net<%= @artist.picture_url %>" alt="" class="artist_image">
-  <% end %>
-
-
-  <h2 class="mt-5 mb-3">Next events</h2>
+  <h2 class="my-4">Next events</h2>
   <div class="d-flex flex-row flex-wrap justify-content-between">
     <% if @artist.parties.size > 2 %>
       <% @artist.parties.first(3).each do |party| %>
@@ -24,7 +22,7 @@
       <% end %>
     <% end %>
   </div>
-  <h2 class="my-3">Listen to <%= @artist.name %></h2>
+  <h2 class="my-4">Listen to <%= @artist.name %></h2>
   <% @soundcloud.sounds_ids.each do |id| %>
       <%= render 'shared/soundcloud_player', soundcloud_id: "#{id}" %>
   <% end %>
