black banner, pagination

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background-color: #17141d;
+
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -15,8 +16,8 @@
 .navbar-lewagon a {
   text-decoration: none;
   padding-left: 10px;
-  color: $gray;
-  font-weight: 200;
+  color: white;
+  font-weight: 400;
   padding-right: 10px;
 }
 
