--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <a class="navbar-brand" href="/">
-    <%= image_tag 'techno2U.png'%>
+    <%= image_tag 'logoTechno2U.png'%>
 </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -10,7 +10,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <%= link_to 'Home', root_path %>
+        <%= link_to 'Home', root_path  %>
       </li>
 
       <li class="nav-item">
@@ -19,7 +19,7 @@
 
       <% if current_user.nil?  %>
         <li class="nav-item">
-          <%= link_to 'Log-in', new_user_session_path  %>
+          <%= link_to 'Log-in', new_user_session_path   %>
         </li>
         <li class="nav-item">
           <%= link_to 'Sign-up', new_user_registration_path  %>
@@ -27,11 +27,11 @@
       <!-- CHANGE THE PATH FOR THE PROFILE -->
       <% else %>
         <li class="nav-item">
-          <%= link_to 'Profile', profile_path(@user)  %>
+          <%= link_to 'Profile', profile_path(@user)   %>
         </li>
 
         <li class="nav-item" id="quizz">
-          <%= link_to 'Quizz', new_preference_path  %>
+          <%= link_to 'Quizz', new_preference_path   %>
         </li>
 
         <li class="nav-item">
