change in pagination front

--- a/app/views/parties/index.html.erb
+++ b/app/views/parties/index.html.erb
@@ -12,7 +12,7 @@
           <% end %>
         </div>
       </div>
-      <div class="container-li">
+      <div class="container-li m-3 d-flex justify-content-center">
         <%= paginate @parties %>
       </div>
       </div>
