--- a/app/views/parties/show.html.erb
+++ b/app/views/parties/show.html.erb
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div class="date-and-place mt-3 mb-3">
-    <i class="fas fa-map-marker text-light"></i>
+    <i class="fab fa-houzz text-light"></i>
     <div class="date-and-place-infos">
       <h6><%= @party.venue_name %></h6>
       <h6><%= @party.venue_location %></h6>
