--- a/app/views/shared/_profile_card.html.erb
+++ b/app/views/shared/_profile_card.html.erb
@@ -12,7 +12,7 @@
 
       <li><i class="far fa-calendar-alt text-light"></i><%= party.start_date %> at <%= party.start_time %> - <%= party.end_date %> at <%= party.end_time %></li>
 
-      <li><i class="fas fa-map-marker text-light"></i></i><%= party.venue_location %></li>
+      <li><i class="fab fa-houzz text-light"></i></i><%= party.venue_location %></li>
     </ul>
   </div>
 
