--- a/app/views/shared/_party_card.html.erb
+++ b/app/views/shared/_party_card.html.erb
@@ -4,7 +4,7 @@
     <i class="far fa-calendar-alt text-light mr-3"></i><%= party.start_date %> - <%= party.start_time %>
   </div>
   <div class="m-3">
-    <i class="fas fa-map-marker text-light mr-3"></i><%= party.venue_name %> - <%= party.venue_location %>
+    <i class="fab fa-houzz text-light"></i><%= party.venue_name %> - <%= party.venue_location.truncate(55) %>
   </div>
   </ul>
 </div>
