--- a/app/assets/stylesheets/components/_profile_card.scss
+++ b/app/assets/stylesheets/components/_profile_card.scss
@@ -45,7 +45,7 @@
 
 .profile-card-left img {
   width: 100%;
-  height: 179px;
+  height: 100%;
   max-height: 220px;
   object-fit: cover;
   border-radius: 10px;
