--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -25,4 +25,6 @@
 @import "alert_for_card_event";
 @import "alert_event_save";
 @import "form";
-@import "kaminari_pagination"
+@import "kaminari_pagination";
+@import "modal_location_quiz";
+
