--- a/app/assets/stylesheets/components/_modal_location_quiz.scss
+++ b/app/assets/stylesheets/components/_modal_location_quiz.scss
@@ -3,16 +3,29 @@
 }
 
 .modal-body {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  // justify-content: space-between;
+  flex-direction:column;
+
+  ul {
+    list-style: none;
+    left:0;
+    padding-left: 0px;
+  }
+
 	h3 {
 		font-size: 36px;
+    text-align: center;
 	}
 	a {
 	  text-decoration: none;
 	  color: white;
 	  font-size: 20px;
 	}
-	
+
 	a:hover {
+
 	  span {
 	    .out {
 	      opacity: 0;
